<resources>
    <string name="app_name">HSCM Connect</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="login_to_continue">Login to continue your journey.</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="dont_have_account">"Don't have an account? "</string>
    <string name="sign_up">Sign Up</string>
    <string name="sermon_details_title">Sermon Details</string>
    <string name="course_details_title">Course Details</string>
    <string name="description">Description</string>
    <string name="course_lessons_count">%d Lessons</string>
    <string name="lesson_number">Lesson %d</string>
    <string name="event_date_time_format">%1$s at %2$s</string>
    <string name="event_platform_format">Platform: %1$s</string>

    <!-- Partner Screen Strings -->
    <string name="partner_title">Become a Partner in the Vision</string>
    <string name="partner_description">Your giving enables us to spread the Gospel, serve the community, and transform lives. Thank you for being part of what God is doing through HSCM Connect.</string>
    <string name="give_online_button_text">Give Securely Online</string>
    <string name="other_ways_to_give">Other Ways to Give</string>
    <string name="mpesa_instructions">1. Piga *150*00#\n2. Chagua 4: Lipa kwa M-PESA\n3. Chagua 4: Weka Namba ya Kampuni\n4. Weka Namba ya Kampuni: <b>123456</b>\n5. Weka Namba ya Kumbukumbu: <b>SADAKA</b>\n6. Weka Kiasi\n7. Weka Namba ya Siri\n8. Bonyeza 1 kuthibitisha</string>
    <string name="tigopesa_instructions">1. Piga *150*01#\n2. Chagua 4: Lipa Bili\n3. Chagua 3: Ingiza Namba ya Kampuni\n4. Weka Namba ya Kampuni: <b>654321</b>\n5. Weka Namba ya Kumbukumbu: <b>SADAKA</b>\n6. Weka Kiasi\n7. Weka Namba ya Siri kuthibitisha</string>


    <!-- Sign Up Screen Strings -->
    <string name="create_account">Create Account</string>
    <string name="start_your_journey">Start your journey with us.</string>
    <string name="full_name">Full Name</string>
    <string name="already_have_account">"Already have an account? "</string>
    <string name="title_activity_sign_up">Sign Up</string>
    <string name="logout">Logout</string>
    <string name="leadership">Leadership</string>

</resources>
